--- a/covid/requirements.txt
+++ b/covid/requirements.txt
@@ -3,8 +3,7 @@ chardet==3.0.4
 click==7.1.1
 dominate==2.5.1
 Flask==1.1.2
-Flask-Bootstrap==3.3.7.1
-flask-nav==0.6
+gunicorn==20.0.4
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
