--- a/covid/requirements.txt
+++ b/covid/requirements.txt
@@ -1,3 +1,6 @@
+appdirs==1.4.3
+attrs==19.3.0
+black==19.10b0
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
@@ -8,7 +11,18 @@ idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+mccabe==0.6.1
+pathspec==0.8.0
+pycodestyle==2.5.0
+pydocstyle==5.0.2
+pyflakes==2.2.0
+pylama==7.7.1
+python-dotenv==0.12.0
+regex==2020.4.4
 requests==2.23.0
+snowballstemmer==2.0.0
+toml==0.10.0
+typed-ast==1.4.1
 urllib3==1.25.8
 visitor==0.1.3
 Werkzeug==1.0.1
